--- a/index.html
+++ b/index.html
@@ -1,18 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Protfolio Website </title>
-</head>
-<body>
 
-    <header> Welcome To my Website 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body class="open-sans-normal ">
+
+    <header>
+
+        <nav>
+            <h3 class="nav-title">
+                Ma<span class="orange-color">r</span>y
+            </h3>
+            <ul>
+                <li><a href="">Protfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button class="button">Hire Me</button></a></li>
+            </ul>
+        </nav>
+
+        <div class="hero-div">
+            <div class="text-div">
+
+                <h4>Hi, I am</h4>
+                <h2>Mary Hardy</h2>
+
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+
+                <button class="download">Download CV</button>
+                <button class="contact">Contact</button>
+            </div>
+            <div class="image-div">
+                <img src="../images/hardy.png" alt="">
+
+
+
+
+            </div>
+        </div>
 
     </header>
     <main>
 
+        <div class="about-me-full">
+            <div class="about-me">
+                <div class="top-about">
+                    <h4>About Me</h4>
+                    <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                        slick websites that provide real value to the end user. Thousands of clients have procured
+                        exceptional resulfs while working with me. Delivering work within time and budget which meets
+                        clients requirements in our mata.</p>
+
+                </div>
+
+                <div class="bottom-about">
+                    <div class="name">
+                        <p class="id">Name:</p>
+                        <p class="info">Mary Hardy</p>
+                    </div>
+                    <div class="name">
+                        <p class="id">Email:</p>
+                        <p class="info">info@gmail.com</p>
+                    </div>
+                    <div class="name">
+                        <p class="id">Date of birth:</p>
+                        <p class="info">11 November 1998</p>
+                    </div>
+                    <div class="name">
+                        <p class="id">From:</p>
+                        <p class="info">Los Angeles, USA</p>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+        <div class="box-container">
+            <div class="container">
+                <img src="../images/icons/js.png " alt="" class="boximage">
+                <h4 class="box-title">Vanilla Javascript</h4>
+                <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="container">
+                <img src="../images/icons/react.png" alt="" class="boximage">
+                <h4 class="box-title">React</h4>
+                <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="container">
+                <img src="../images/icons/nodejs.png" alt="" class="boximage">
+                <h4 class="box-title">Node.Js</h4>
+                <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="container">
+                <img src="../images/icons/mongo.png" alt="" class="boximage">
+                <h4 class="box-title">MongoDB</h4>
+                <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+
+
+
+
+        </div>
+
+
+
+        <section class="resume">
+            <h3 class="resume-title">A Summary of My Resume</h3>
+            <div class="resume-contaier">
+
+                <div class="resume-collam">
+                    <h3 class="resume-collam-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="school-name">Master in Computer Engineering</h4>
+                        <p class="school-title">Harvard University / 2015 - 2017</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="school-name">Master in Computer Engineering</h4>
+                        <p class="school-title">Harvard University / 2015 - 2017</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="school-name">Master in Computer Engineering</h4>
+                        <p class="school-title">Harvard University / 2015 - 2017</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    </div>
+                </div>
+                <div class="resume-collam">
+                    <h3 class="resume-collam-title">My experience</h3>
+                    <div class="experience">
+                        <h4 class="school-name">Sr. Font End Developer</h4>
+                        <p class="school-title">Apple Inc / 2020 - Current</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="school-name">Sr. Font End Developer</h4>
+                        <p class="school-title">Apple Inc / 2020 - Current</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="school-name">Sr. Font End Developer</h4>
+                        <p class="school-title">Apple Inc / 2020 - Current</p>
+                        <p class="school-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="resume-button">
+                <button class="second download">Download CV</button>
+            </div>
+
+
+        </section>
+
+
+
+
     </main>
+
+
     <footer>
 
 
@@ -24,6 +201,7 @@
 
 
 
-    
+
 </body>
-</html> 
+
+</html>
