--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button class="contact">Contact</button>
             </div>
             <div class="image-div">
-                <img src="../images/hardy.png" alt="">
+                <img src="/images/hardy.png" alt="">
 
 
 
