--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
 
         <div class="box-container">
             <div class="container">
-                <img src="../images/icons/js.png " alt="" class="boximage">
+                <img src="/images/icons/js.png" alt="" class="boximage">
                 <h4 class="box-title">Vanilla Javascript</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
             <div class="container">
-                <img src="../images/icons/react.png" alt="" class="boximage">
+                <img src="images/icons/react.png" alt="" class="boximage">
                 <h4 class="box-title">React</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
             <div class="container">
-                <img src="../images/icons/nodejs.png" alt="" class="boximage">
+                <img src="images/icons/nodejs.png" alt="" class="boximage">
                 <h4 class="box-title">Node.Js</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
             <div class="container">
-                <img src="../images/icons/mongo.png" alt="" class="boximage">
+                <img src="images/icons/mongo.png" alt="" class="boximage">
                 <h4 class="box-title">MongoDB</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
