all image correction

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button class="contact">Contact</button>
             </div>
             <div class="image-div">
-                <img src="/images/hardy.png" alt="">
+                <img src="images/hardy.png" alt="">
 
 
 
@@ -91,7 +91,7 @@
 
         <div class="box-container">
             <div class="container">
-                <img src="/images/icons/js.png" alt="" class="boximage">
+                <img src="images/icons/js.png" alt="" class="boximage">
                 <h4 class="box-title">Vanilla Javascript</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
