--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/574802f642.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal ">
@@ -37,8 +38,8 @@
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
 
-                <button class="download">Download CV</button>
-                <button class="contact">Contact</button>
+                <button class="download"> <i class="fa-solid fa-download"></i>Download CV</button>
+                <button class="contact"><i class="fa-solid fa-phone"></i>Contact</button>
             </div>
             <div class="image-div">
                 <img src="images/hardy.png" alt="">
@@ -91,7 +92,8 @@
 
         <div class="box-container">
             <div class="container">
-                <img src="images/icons/js.png" alt="" class="boximage">
+                <img src="images/icons/js.png
+                " alt="" class="boximage">
                 <h4 class="box-title">Vanilla Javascript</h4>
                 <p class="box-para">List skill/technologies here. You can change the icon above to any of the 1500+
                     FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -178,7 +180,7 @@
 
             </div>
             <div class="resume-button">
-                <button class="second download">Download CV</button>
+                <button class="second download"> <i class="fa-solid fa-download"></i>Download CV</button>
             </div>
 
 
@@ -191,6 +193,30 @@
 
 
     <footer>
+
+      <div class="footer-full">
+          <div class="footer-one">
+            <div class="footer-text">
+                <h4>Lets Connect</h4>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="footer-img">
+                    <img class="footer-img" src="images/icons/facebook.png" alt="">
+                    <img class="footer-img" src="images/icons/insta.png" alt="">
+                    <img class="footer-img" src="images/icons/twitter.png" alt="">
+                </div>
+            </div>
+            
+        </div>
+        <div class="footer-two">
+                <h4>Lets Message Me</h4>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                      <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                     <input class="download" type="submit" value="Submit">
+                </form>
+            </div>
+      </div>
 
 
     </footer>
